RESOLVED FIXED269994
[WebGPU] wgslLanguageFeatures is missing
https://bugs.webkit.org/show_bug.cgi?id=269994
Summary [WebGPU] wgslLanguageFeatures is missing
Mike Wyrzykowski
Reported 2024-02-23 09:10:23 PST
[SameObject] readonly attribute WGSLLanguageFeatures wgslLanguageFeatures;
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-23 09:10:37 PST
Mike Wyrzykowski
Comment 2 2024-02-26 10:27:19 PST
EWS
Comment 3 2024-02-27 08:37:10 PST
Committed 275384@main (fe6c3c14a428): <https://commits.webkit.org/275384@main> Reviewed commits have been landed. Closing PR #25113 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.