[WebGPU] wgslLanguageFeatures is missing https://bugs.webkit.org/show_bug.cgi?id=269994 <radar://123512478>

Reviewed by Dan Glastonbury.

WGSLLaanguageFeatures can be empty but the specification
expects an empty set in that case. We don't currenlty
support any language features.

* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources-input.xcfilelist:
* Source/WebCore/DerivedSources-output.xcfilelist:
* Source/WebCore/DerivedSources.make:
* Source/WebCore/Modules/WebGPU/GPU.cpp:
(WebCore::GPU::GPU):
(WebCore::GPU::getPreferredCanvasFormat const):
(WebCore::GPU::wgslLanguageFeatures const):
(WebCore::GPU::getPreferredCanvasFormat): Deleted.
* Source/WebCore/Modules/WebGPU/GPU.h:
* Source/WebCore/Modules/WebGPU/GPU.idl:
* Source/WebCore/Modules/WebGPU/WGSLLanguageFeatures.cpp: Copied from Source/WebCore/Modules/WebGPU/GPU.idl.
(WebCore::WGSLLanguageFeatures::initializeSetLike const):
* Source/WebCore/Modules/WebGPU/WGSLLanguageFeatures.h: Copied from Source/WebCore/Modules/credentialmanagement/DigitalIdentity.cpp.
(WebCore::WGSLLanguageFeatures::create):
* Source/WebCore/Modules/WebGPU/WGSLLanguageFeatures.idl: Copied from Source/WebCore/Modules/WebGPU/GPU.idl.
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/bindings/js/WebCoreBuiltinNames.h:

Canonical link: https://commits.webkit.org/275384@main